slurm-scripts/logs/.ipynb_checkpoints/mem_model_grid_singleISI_44002805_52-checkpoint.err
  File "/om2/user/bjmedina/auditory-memory/memory/src/model/main-singleisi.py", line 8
    %load_ext autoreload
    ^
SyntaxError: invalid syntax
